<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    >
    
    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_dialog_usedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_title"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:text="@string/used_time"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_usedTime"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/btn_dialog_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/dialog_next"
            android:visibility="gone"
            android:contentDescription="@string/dialog_next"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/btn_dialog_replay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/dialog_replay"
            android:contentDescription="@string/dialog_replay"
            android:scaleType="fitXY" />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/btn_dialog_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/login"
            android:contentDescription="@string/login"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/btn_dialog_exit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/dialog_exit"
            android:contentDescription="@string/dialog_exit"
            android:scaleType="fitXY" />


    </LinearLayout>

</RelativeLayout>